# seanox-ai-nlp

./: .gitignore  CHANGES  CONTRIBUTING.md  README.md  pyproject.toml  reminder.md  setup.py
assets/: retrieval-process.drawio
examples/: requirements.txt
examples/synthetics/: example-pandas.py  example-spaCy-pipeline.py  synthetics_en_annotate.yaml
examples/units/: exampl-pandas.py  example-pandas.py  example-spaCy-component.py  example-spaCy-pipeline.py
seanox_ai_nlp/: __init__.py
seanox_ai_nlp/logics/: README.md  __init__.py  logics.py
seanox_ai_nlp/relations/: README.md  __init__.py  abstract.py  concepts.md  relations.py
seanox_ai_nlp/relations/concepts/: README.md  methodology.md  test.md  theoretical.md
seanox_ai_nlp/relations/lang/: __init__.py  abstract.py  de.py  default.py  dk.py  en.py  es.py  fr.py  it.py  ru.py
seanox_ai_nlp/synthetics/: README.md  __init__.py  synthetics.py
seanox_ai_nlp/units/: README.md  __init__.py  units.py  units.xlsx
tests/: synthetics-planets_de.json  synthetics-planets_en.json  synthetics_custom_filters.yaml  synthetics_de.yaml  synthetics_de_annotate.yaml  synthetics_en.yaml  synthetics_en_annotate.yaml  synthetics_recursions.yaml  synthetics_spans_expression.yaml  synthetics_test.yaml  synthetics_validation_03.yaml  synthetics_validation_05.yaml  synthetics_validation_06.yaml  synthetics_validation_11.yaml  synthetics_validation_12.yaml  synthetics_validation_13.yaml  synthetics_validation_14.yaml  synthetics_validation_15.yaml  synthetics_validation_16.yaml  synthetics_validation_17.yaml  synthetics_validation_18.yaml  test_logics.py  test_logics_de.py  test_relations_de_01.py  test_relations_de_02.py  test_relations_de_03.py  test_synthetics_annotate.py  test_synthetics_custom_filters.py  test_synthetics_empty.py  test_synthetics_normalize.py  test_synthetics_random_range.py  test_synthetics_random_range_join.py  test_synthetics_random_range_join_phrase.py  test_synthetics_random_set.py  test_synthetics_recursions.py  test_synthetics_spans_expression.py  test_synthetics_synthetics.py  test_synthetics_validation.py  test_units.py  test_units_numeric.py  (+6 more)
