[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seanox-ai-nlp"
version = "1.3.0.1"
description = "Lightweight NLP components for semantic processing of domain-specific content."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Seanox Software Solutions"}]
requires-python = ">=3.10"
keywords = [
    "NLP", "fine-tuning", "information retrieval", "preprocessing",
    "semantic retrieval", "retrieval optimization",
    "domain-specific", "structured data",
    "semantic processing", "text processing",
    "information extraction", "entity extraction",
    "measurement units", "measurement extraction",
    "synthetic data", "data generation", "synthetic text", "template engine", "sentence generator",
    "data annotation", "semantic labeling", "pretraining data",
    "training data augmentation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.17",
    "jinja2>=3.0.0",
    "stanza>=1.10.1"
]

[project.urls]
Homepage = "https://github.com/seanox/seanox-ai-nlp"
Issues = "https://github.com/seanox/seanox-ai-nlp/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
